restore java 8 compatibility